@@ -44,7 +44,7 @@ class Process
 {
 public:
 	/* the process makes a copy of the device name and name. */
-	Process (unsigned long m_inode, char * m_devicename, char * m_name = NULL)
+	Process (unsigned long m_inode, const char * m_devicename, const char * m_name = NULL)
 	{
 		//std::cout << "ARN: Process created with dev " << m_devicename << std::endl;
 		if (DEBUG)
